--- a/python/postal-tests.ipynb
+++ b/python/postal-tests.ipynb
@@ -113,11 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "def deg_to_rad(x): # convert lat, lon pair from deg to radians\n",
+    "    print(x)\n",
     "    return [x[0] * np.pi / 180, x[1] * np.pi / 180]"
    ]
   },
@@ -131,6 +132,23 @@
     "arr_rad = np.array([ deg_to_rad(x) for x in arr ])\n",
     "point = [43.9048786, -79.4450157]\n",
     "point_rad = np.array(deg_to_rad(point))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.76628469 -1.3865771 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(point_rad)"
    ]
   },
   {
@@ -205,20 +223,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.88 s\n"
+      "Wall time: 1.85 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "tree = BallTree(arr_rad, leaf_size=2, metric='haversine') # initialize index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(tree, open('ball_postal_index.p', \"wb\"))"
    ]
   },
   {
@@ -237,6 +265,66 @@
    "source": [
     "%%time\n",
     "dist, ind = tree.query([point_rad], k=100) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find postal codes in a radius\n",
+    "%%time\n",
+    "radius = km_to_rad(5)\n",
+    "point_rad = np.array(deg_to_rad(point))\n",
+    "ind = tree.query_radius([point_rad], r=[radius]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[43.9048786, -79.4450157]\n"
+     ]
+    }
+   ],
+   "source": [
+    "point_rad = np.array(deg_to_rad(point))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['L0G', 'L3T', 'L4A', 'L4B', 'L4C', 'L4E', 'L4M', 'L4S', 'L6A',\n",
+       "       'L6B', 'M2M', 'M2N'], dtype=object)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fsa = np.asarray(postal_codes.loc[:, ['FSA']])\n",
+    "np.unique(fsa[ind[-1]])"
    ]
   },
   {
@@ -301,6 +389,18 @@
     "def rad_to_km(rad):\n",
     "    r = 6371 # earth radius in km\n",
     "    return rad*r # radians = arc_len / radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert radians to km\n",
+    "def km_to_rad(km):\n",
+    "    r = 6371 # earth radius in km\n",
+    "    return km/r # radians = arc_len / radius"
    ]
   },
   {
