latest notebook versions

--- a/python/postal-tests.ipynb
+++ b/python/postal-tests.ipynb
@@ -14,11 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "postal_codes = pd.read_csv('./CanadianPostalCodes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save only FSA codes\n",
+    "postal_codes.loc[:, ['FSA']].to_csv('./FSA.csv', index=False)"
    ]
   },
   {
