--- a/python/twitter-loader.ipynb
+++ b/python/twitter-loader.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,47 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 428,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n",
-      "Old tweet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extract tweets from last 36hrs\n",
     "tweets_36h = []\n",
@@ -128,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "169"
+       "200"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 429,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +198,7 @@
     "        self.API_KEY = os.getenv('GOOGLE_API_KEY')\n",
     "        \n",
     "        # load postal codes and ANN index\n",
-    "        self.tree = pickle.load(open('ball_postal_index.p', \"rb\"))\n",
+    "        self.tree = pickle.load(open('./utils/ball_postal_index.p', \"rb\"))\n",
     "        postal_codes = pd.read_csv('./CanadianPostalCodes.csv')\n",
     "        self._fsa = np.asarray(postal_codes.loc[:, ['FSA']])\n",
     "        self._radius = [self.km_to_rad(2.5)] # search in 2.5km radius\n",
@@ -396,19 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 434,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract = TweetExtract()\n",
     "data = extract.extract_tweets(tweets_36h)"
@@ -416,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "89"
+       "59"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,19 +743,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load to API\n",
     "api_key = os.getenv('API_KEY')\n",
     "secret = os.getenv('SECRET_KEY')\n",
-    "api_url = \"http://localhost:3000\""
+    "api_url = \"https://findavaccine.ca\" #\"http://localhost:3000\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +774,6 @@
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
-      "Updating Niagara Region Public Health\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
@@ -852,46 +805,17 @@
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
+      "Updating West Park Healthcare Centre\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
+      "Updating Region of Peel\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
-      "Updating Vaccine Hunters Canada\n",
+      "Updating Unity Health Toronto\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
       "Updating Vaccine Hunters Canada\n",
@@ -917,14 +841,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notified 0 users\n"
+      "Notified 40 users\n"
      ]
     }
    ],
