enhancement to serve "all hotspot" type tweets

--- a/python/twitter-loader.ipynb
+++ b/python/twitter-loader.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +193,13 @@
     "        self.st_lookup = {'street': 'st', 'road': 'rd', 'drive': 'dr', 'boulevard': 'blvd', 'avenue':'ave', 'highway':'hwy'}\n",
     "        self.t_link_pat = re.compile(r\"https:\\/\\/t.co\\/\\w+\")\n",
     "        self.province_pat = re.compile(r\"\\[(\\w{2})\\]\")\n",
+    "        self.all_postal_pat = re.compile(r'\\\"([A-Z])\\\".*(?:HOTSPOT|hotspot|Hotspot|hot spot)')\n",
     "        self.num_match = 0\n",
     "        \n",
     "        self.API_KEY = os.getenv('GOOGLE_API_KEY')\n",
+    "        \n",
+    "        # load hotspot postals\n",
+    "        self.hotspot_postals()\n",
     "        \n",
     "        # load postal codes and ANN index\n",
     "        self.tree = pickle.load(open('./utils/ball_postal_index.p', \"rb\"))\n",
@@ -203,6 +207,17 @@
     "        self._fsa = np.asarray(postal_codes.loc[:, ['FSA']])\n",
     "        self._radius = [self.km_to_rad(2.5)] # search in 2.5km radius\n",
     "        del postal_codes\n",
+    "        \n",
+    "    def hotspot_postals(self):\n",
+    "        resp = requests.get('http://localhost:3000/api/clinics/postal')\n",
+    "        if resp.status_code == 200:\n",
+    "            try:\n",
+    "                codes = json.loads(resp.text)\n",
+    "                if(codes):\n",
+    "                    self.hotspot_map = codes['mapped']\n",
+    "            except Exception as e:\n",
+    "                self.hotspot_map = {}\n",
+    "                pass # do nothing\n",
     "        \n",
     "    def get_age(self, full_text):\n",
     "        extracted_age = None\n",
@@ -288,8 +303,11 @@
     "        extracted_postal = []\n",
     "        clean_text = self.t_link_pat.sub('', full_text)\n",
     "        postals = self.postal_pat.findall(clean_text)\n",
-    "        \n",
-    "        if postals: #check for postal code\n",
+    "        all_postal = self.all_postal_pat.search(full_text)\n",
+    "        if all_postal:\n",
+    "            letter = all_postal.group(1)\n",
+    "            extracted_postal = self.hotspot_map.get(letter, [])\n",
+    "        elif postals: #check for postal code\n",
     "            extracted_postal = postals\n",
     "        else: # check for address\n",
     "            lines = clean_text.split(\"\\n\")\n",
@@ -358,11 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 460,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ON] NEW POPUP ALERT: St. John the Evangelist Catholic School (23 George Street) is open to 18+ living or working in ALL \"M\" HOTSPOTS. 10am-9pm TODAY!  Let's get vaxxed!! https://t.co/A4FzWCxNHm #COVID19 #COVID19Vaccine #COVID19ON #vhcON\n",
+      "M\n",
+      "['M1B', 'M1C', 'M1E', 'M1G', 'M1H', 'M1J', 'M1K', 'M1L', 'M1M', 'M1P', 'M1R', 'M1S', 'M1T', 'M1V', 'M1W', 'M1X', 'M2J', 'M2M', 'M2R', 'M3A', 'M3C', 'M3H', 'M3J', 'M3K', 'M3L', 'M3M', 'M3N', 'M4A', 'M4H', 'M4X', 'M5A', 'M5B', 'M5N', 'M5V', 'M6A', 'M6B', 'M6E', 'M6H', 'M6K', 'M6L', 'M6M', 'M6N', 'M8V', 'M9A', 'M9B', 'M9C', 'M9L', 'M9M', 'M9N', 'M9P', 'M9R', 'M9V', 'M9W']\n"
+     ]
+    }
+   ],
    "source": [
     "extract = TweetExtract()\n",
     "data = extract.extract_tweets(tweets_36h)"
